Add unique constraint to genre table. Fix genre inserting issue.